--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.1.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
