--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-card-slider-component": "^1.0.9",
